Add site header

--- a/index.html
+++ b/index.html
@@ -18,5 +18,26 @@
 
 <body>
 
+
+  <div class="site-header-hero-wrapper">
+    <!-- SITE-HEADER -->
+    <header class="site-header">
+      <div class="site-header-container container">
+        <a class="site-header-logo-link" href="index.html">
+          <img class="site-header-logo-img" src="img/main-icon.svg" alt="Main-logo" width="235" height="24">
+        </a>
+
+
+        <!-- SITENAV -->
+        <nav class="sitenav">
+          <ul class="sitenav-list">
+            <li class="sitenav-item"><a class="sitenav-link" href="#">Home</a></li>
+            <li class="sitenav-item"><a class="sitenav-link" href="#">About</a></li>
+            <li class="sitenav-item"><a class="sitenav-link" href="#">Create your plan</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </div>
 </body>
 </html>
