Add hero section

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       <div class="hero-container container">
         <div class="hero-info-wrapper">
           <h1 class="hero-heading">Good coffee<br>is made simply.</h1>
-          <p class="hero-text">Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.</p>
+          <p class="hero-text">Start your mornings with the world’s best coffees. Try our <br> expertly curated artisan coffees from our best roasters delivered <br> directly to your door, at your schedule.</p>
           <a class="button button-green" href="#">Create your plan</a>
         </div>
 
-        <img class="hero-img" src="img/index-hero-img.jpg" alt="Iced coffee and cake" srcset="img/index-hero-img.jpg 1x, img/index-hero-img@2x.jpg 2x">
+        <img class="hero-img hero-img-index" src="img/index-hero-img.jpg" alt="Iced coffee and cake" width="710" height="596" srcset="img/index-hero-img.jpg 1x, img/index-hero-img@2x.jpg 2x">
       </div>
     </div>
   </div>
