Add decorative images

--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
           <p class="hero-text">Start your mornings with the world’s best coffees. Try our <br> expertly curated artisan coffees from our best roasters delivered <br> directly to your door, at your schedule.</p>
           <a class="button button-green" href="#">Create your plan</a>
         </div>
-
-        <img class="hero-img hero-img-index" src="img/index-hero-img.jpg" alt="Iced coffee and cake" width="710" height="596" srcset="img/index-hero-img.jpg 1x, img/index-hero-img@2x.jpg 2x">
+        <div class="hero-img-wrapper">
+          <img class="hero-badge" src="/img/hero-badge.png" alt="" width="160" height="160" srcset="/img/hero-badge.png 1x, /img/hero-badge@2x.png 2x">
+          <img class="hero-img hero-img-index" src="img/index-hero-img.jpg" alt="Iced coffee and cake" width="710" height="596" srcset="img/index-hero-img.jpg 1x, img/index-hero-img@2x.jpg 2x">
+        </div>
       </div>
     </div>
   </div>
@@ -96,6 +98,10 @@
               </div>
             </li>
           </ul>
+
+          <img class="index-collection-leaves-left" src="/img/leaves-left.svg" alt="" width="371" height="371">
+          <img class="index-collection-leaves-mix" src="/img/leaves-mix.svg" alt="" width="546" height="592">
+          <img class="index-collection-leaves-light" src="/img/leaves-left-light.svg" alt="" width="314" height="287">
         </div>
       </div>
     </section>
